<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="@dimen/dp_20">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_issue"
        style="@style/DefaultEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_solid_white_with_gray_border"
        android:hint="@string/issue"
        android:padding="@dimen/dp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_detailMsg"
        style="@style/DefaultEditTextStyle"
        android:layout_width="0dp"
        android:minHeight="@dimen/dp_120"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_solid_white_with_gray_border"
        android:hint="@string/write_here"
        android:padding="@dimen/dp_12"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_issue" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_10"
        app:cardElevation="@dimen/dp_5"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="@dimen/dp_20"
        app:cardBackgroundColor="@color/colorBlue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_detailMsg" >

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/WhiteRegular14SpBtnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_blue_with_10dp_rounded_corner"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/submit" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>