<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.common.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_7"
            android:layout_marginLeft="@dimen/dp_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/back_black_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/BlackBold16SpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/forgot_password"
            android:textSize="@dimen/sp_22"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_welcomeMsg"
            style="@style/GrayRegular14SpTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_email_id_we_have_sent_your_password_in_email_id"
            android:textSize="@dimen/sp_16"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            app:cardCornerRadius="@dimen/dp_20"
            app:cardElevation="@dimen/dp_5"
            app:cardUseCompatPadding="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcomeMsg">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lyt_forgotEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_solid_white_rounded_corner">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_forgotEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/email_off_icon" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_forgotEmail"
                    style="@style/DefaultEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:padding="@dimen/dp_13"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/iv_forgotEmail"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_resetPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dp_20"
            app:cardElevation="@dimen/dp_5"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="@dimen/dp_10"
            app:cardBackgroundColor="@color/colorBlue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_email" >

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/WhiteRegular14SpBtnStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_blue_rounded"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/reset_password" />

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>